manual/disconnected-demo/4.ocp/httpd-deployment/secured-route/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd-example
  name: secured-route
  namespace: httpd-example
spec:
  host: httpd.apps.vqmpz.dynamic.redhatworkshops.io
  port:
    targetPort: http
  tls:
    externalCertificate:
      name: httpd-example-route-cert
  to:
    kind: Service
    name: httpd-example
    weight: 100
  wildcardPolicy: None
